--- a/app/views/cases/edit.html.erb
+++ b/app/views/cases/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Case</h1>
 
-<%= render 'form', case: @case %>
+<%= render 'form', mycase: @case %>
 
 <%= link_to 'Show', @case %> |
 <%= link_to 'Back', cases_path %>
