--- a/app/assets/stylesheets/picking.scss
+++ b/app/assets/stylesheets/picking.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the picking controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#refresh {
+  margin-bottom: 20px;
+}
